Refactor meeting start notification and current meeting state

--- a/functions/_src/i18n/locales/en.json
+++ b/functions/_src/i18n/locales/en.json
@@ -31,6 +31,13 @@
         "cta": "Sign in"
       }
     },
+    "Meeting": {
+      "subject": "Meeting started: {{title}} - {{role}}",
+      "title": "Meeting {{title}} - {{role}}",
+      "preview": "The meeting starts now 🙌",
+      "activity": "The meeting starts now 🙌",
+      "cta": "Open the meeting"
+    },
     "MemberActivity": {
       "OrgInvitation": {
         "subject": "Invitation to {{org}}'s organization",
@@ -38,13 +45,6 @@
         "preview": "{{member}} invites you to join {{org}} on Rolebase.",
         "activity": "<b>{{member}}</b> invites you to join <b>{{org}}</b> on Rolebase.",
         "cta": "Accept the invitation"
-      },
-      "MeetingStart": {
-        "subject": "{{member}} has started the meeting {{title}} - {{role}}",
-        "title": "Meeting {{title}} - {{role}}",
-        "preview": "{{member}} started the meeting!",
-        "activity": "<b>{{member}}</b> started the meeting!",
-        "cta": "Open the meeting"
       }
     },
     "Digest": {
