--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -785,7 +785,7 @@
     "name": "First and last name",
     "email": "Email",
     "password": "Password",
-    "terms": "I accept the <a href=\"https://www.rolebase.io/conditions-generales-de-vente\">Terms and Conditions</term> and the <a href=\"https://www.rolebase.io/privacy\">Privacy Policy</policy>",
+    "terms": "I accept the <a href=\"https://en.rolebase.io/conditions-generales-de-vente\">Terms and Conditions</term> and the <a href=\"https://en.rolebase.io/privacy\">Privacy Policy</policy>",
     "submit": "Create my account"
   },
   "SubscriptionPage": {
