Change label of name input in CurrentUserModal

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -215,6 +215,7 @@
   },
   "CurrentUserModal": {
     "heading": "My personal information",
+    "name": "First and last name",
     "email": "Email",
     "emailPlaceholder": "Email address...",
     "password": "Change password",
