Add news page back

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -786,7 +786,7 @@
     "close": "Close sidebar",
     "orgs": "Organizations",
     "menu": "Menu",
-    "dashboard": "News",
+    "news": "News",
     "roles": "Org chart",
     "threads": "Topics",
     "meetings": "Meetings",
