--- a/packages/webapp/src/i18n/locales/fr.json
+++ b/packages/webapp/src/i18n/locales/fr.json
@@ -818,7 +818,7 @@
   "Sidebar": {
     "orgs": "Organisations",
     "menu": "Menu",
-    "dashboard": "Actualités",
+    "news": "Actualités",
     "roles": "Organigramme",
     "threads": "Sujets",
     "meetings": "Réunions",
