Add icon to close sidebar

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -802,6 +802,7 @@
   },
   "Sidebar": {
     "close": "Close sidebar",
+    "lock": "Lock sidebar open",
     "orgs": "Organizations",
     "settings": "Settings",
     "menu": "Menu",
