Fix smal stuff in subscriptions

--- a/packages/webapp/src/i18n/locales/en.json
+++ b/packages/webapp/src/i18n/locales/en.json
@@ -832,8 +832,7 @@
     "subscription": "Subscription",
     "mustBeOwner": "You must be an owner of this org to manage the subscription",
     "cancelSubscriptionModal": {
-      "title": "Cancel my subscription",
-      "subtitle": "Are you sure you want to cancel your subscription?",
+      "heading": "Are you sure you want to cancel your subscription?",
       "desc1": "This action will take effect at the end of the subscription period.",
       "desc2": "Your organization will only be able to have 5 invited members.",
       "desc3": "You will lose personalized support and priority support with our team."
