--- a/packages/webapp/src/i18n/locales/fr.json
+++ b/packages/webapp/src/i18n/locales/fr.json
@@ -188,6 +188,9 @@
     "linkTooltip": "Rôle invité",
     "removeLink": "Retirer le rôle invité"
   },
+  "CircleRoleLinkParents": {
+    "title": "Participe à"
+  },
   "CirclesPage": {
     "title": "Organigramme de {{org}}",
     "empty": "Votre organigramme est vide pour le moment.",
